# dates

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: build-and-test.yml
src/: dates.cpp  dates.cppm
tests/: dates_tests.cpp
